--- a/SPLImage/SPLSettingViewController.xib
+++ b/SPLImage/SPLSettingViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="background_iPhone5.png" id="4">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="background.png" id="4">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
@@ -112,7 +112,7 @@
         </view>
     </objects>
     <resources>
-        <image name="background_iPhone5.png" width="1200" height="1200"/>
+        <image name="background.png" width="1200" height="1200"/>
         <image name="btn_back.png" width="60" height="20"/>
         <image name="btn_customwatermark.png" width="256" height="47"/>
         <image name="btn_rateus.png" width="256" height="47"/>
